# signal_backend

./: .env.example  .gitignore  README.md  pyproject.toml  stage45_plan.md  stage67plan.md  train.py
apps/api/: main.py
configs/: train_config.json
configs/data/: dataset_config.yaml
configs/inference/: api_config.yaml
configs/train/: baseline_tfidf_linear_svm.yaml  baseline_tfidf_logreg.yaml  transformer_classifier.yaml
ml_removed_from_signal/finetune_pipeline/: README.md  README_FREEZE_PROOF.md  STUDENTS_EXPERIMENTS.md  __init__.py  inference.py
ml_removed_from_signal/finetune_pipeline/artifacts/20260215_183436/: freeze_proof.json  label_to_id.json  metrics.json
ml_removed_from_signal/finetune_pipeline/scripts/: infer.py  preprocess_data.py
ml_removed_from_signal/finetune_pipeline/src/: __init__.py
resources/base_models/mmBERT-base/: config.json  tokenizer_config.json
scripts/: evaluate_model.py  inspect_dataset.py  make_split.py  train_baseline.py  train_transformer.py
src/signal_backend/: __init__.py  config.py  paths.py
src/signal_backend/baselines/: __init__.py  tfidf_features.py  train_linear_svm.py  train_logreg.py
src/signal_backend/data/: __init__.py  dataset_settings.py  label_mapping.py  load_jsonl.py  schemas.py  split_dataset.py  validate_dataset.py
src/signal_backend/inference/: __init__.py  artifact_loader.py  batch_predict.py  model_input.py  predict.py  predictor.py
src/signal_backend/models/: __init__.py  transformer_classifier.py
src/signal_backend/serving/: __init__.py  schemas.py  service.py  settings.py
src/signal_backend/training/: __init__.py  checkpointing.py  dataset_adapter.py  early_stopping.py  evaluate.py  logging_utils.py  metrics.py  save_artifacts.py  train_transformer.py
tests/: conftest.py  test_api_smoke.py  test_baseline_training.py  test_dataset_loading.py  test_dataset_settings.py  test_dataset_validation.py  test_inference_predictor.py  test_metrics.py  test_model_input.py  test_split_dataset.py  test_transformer_smoke.py
training/: README.md  __init__.py  config.py  data.py  model.py  train_classifier.py
(+7 files in other folders)
